...
                android:id="@+id/tilId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="ID"
                app:layout_constraintTop_toBottomOf="@id/tilEmail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnEditId"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:enabled="false"/>

            </com.google.android.material.textfield.TextInputLayout>
...
