<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="332dp"
        android:layout_height="212dp"
        android:layout_marginTop="48dp"
        android:src="@drawable/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSignUpEmail"
        android:layout_width="328dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo" />

    <EditText
        android:id="@+id/etSignUpUSCid"
        android:layout_width="328dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:hint="@string/enter_your_ID"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSignUpEmail" />

    <EditText
        android:id="@+id/etSignUpUserName"
        android:layout_width="328dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:hint="@string/enter_your_username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSignUpUSCid" />

    <EditText
        android:id="@+id/etSignUpPassword"
        android:layout_width="328dp"
        android:layout_height="41dp"
        android:layout_marginTop="12dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSignUpUserName" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="331dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up"
        android:onClick="signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSignUpPassword" />

    <TextView
        android:id="@+id/signUpError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/switch_to_log_in"
        android:textColor="@color/purple"
        android:onClick="tvLoginClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>